# pgr

./: CMakeLists.txt  PGR-doc-xdokou14.docx  README.md
libs/: CMakeLists.txt
libs/assimp-5.2.5/: CMakeLists.txt
libs/assimp-5.2.5/contrib/stb/: stb_image.h
src/: GPU.cpp  GPU.h  main.cpp  model.cpp  model.h  stb_image.h
